# wincom

./: Cargo.toml  README.md
src/: dispatch.rs  interface.rs  lib.rs  utils.rs
tests/: app_path.rs  cad.rs  cad_docs.rs  cad_docs2.rs  cdr.rs  com.rs  com_inter.rs  com_obj.rs  dispatch.rs  gettypeinfo.rs  varit.rs  varit_float.rs  wpp.rs  wps.rs
